Added cost to routers and relevant persistence and path checking.
