# rest_model/router_update.go
@@ -43,6 +43,11 @@ import (
 // swagger:model routerUpdate
 type RouterUpdate struct {
 
+	// cost
+	// Maximum: 65535
+	// Minimum: 0
+	Cost *int64 `json:"cost,omitempty"`
+
 	// fingerprint
 	Fingerprint *string `json:"fingerprint,omitempty"`
 
@@ -58,6 +63,10 @@ type RouterUpdate struct {
 func (m *RouterUpdate) Validate(formats strfmt.Registry) error {
 	var res []error
 
+	if err := m.validateCost(formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.validateName(formats); err != nil {
 		res = append(res, err)
 	}
@@ -69,6 +78,22 @@ func (m *RouterUpdate) Validate(formats strfmt.Registry) error {
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+func (m *RouterUpdate) validateCost(formats strfmt.Registry) error {
+	if swag.IsZero(m.Cost) { // not required
+		return nil
+	}
+
+	if err := validate.MinimumInt("cost", "body", *m.Cost, 0, false); err != nil {
+		return err
+	}
+
+	if err := validate.MaximumInt("cost", "body", *m.Cost, 65535, false); err != nil {
+		return err
+	}
+
 	return nil
 }
 
