# router/config.go
@@ -19,6 +19,13 @@ package router
 import (
 	"bytes"
 	"fmt"
+	"io"
+	"io/ioutil"
+	"os"
+	"strconv"
+	"sync/atomic"
+	"time"
+
 	"github.com/michaelquigley/pfxlog"
 	"github.com/openziti/channel"
 	"github.com/openziti/fabric/pb/ctrl_pb"
@@ -30,11 +37,6 @@ import (
 	"github.com/pkg/errors"
 	"github.com/spf13/pflag"
 	"gopkg.in/yaml.v2"
-	"io"
-	"io/ioutil"
-	"os"
-	"sync/atomic"
-	"time"
 )
 
 const (
@@ -120,6 +122,7 @@ type Config struct {
 		}
 	}
 	Plugins []string
+	Cost    uint16
 	src     map[interface{}]interface{}
 	path    string
 }
@@ -577,6 +580,17 @@ func LoadConfig(path string) (*Config, error) {
 		} else {
 			pfxlog.Logger().Warn("invalid plugins value")
 		}
+	}
+
+	if value, found := cfgmap["cost"]; found {
+		var (
+			val64 uint64
+			err   error
+		)
+		if val64, err = strconv.ParseUint(value.(string), 10, 16); err != nil {
+			return nil, errors.Wrap(err, "invalid value for cost")
+		}
+		cfg.Cost = uint16(val64)
 	}
 
 	return cfg, nil
